# CouncilOfElrond

./: .gitignore  README.md  app.py  model_factory.py  models.py  pyproject.toml  requirements.txt  routes.py  settings.py
database/: __init__.py  model_factory.py  models.py
database/migrations/: 0001_create_thread_table.py  0003_create_user_table.py  0004_add_password_field_to_user_table.py  0007_create_reply_table.py  0008_create_channel_table.py  0009_create_favorite_model.py
filters/: base.py  thread_filter.py
migrations/: 0005_update_username_column_in_user_table.py  0006_add_email_field_to_user_table.py
templates/: base.html  create-thread.html  home.html  login.html  navbar.html  reply.html  show-thread.html  threads.html
templates/profiles/: show.html
tests/: base.py  test_channels.py  test_create_threads.py  test_favorites.py  test_participate_in_forum.py  test_profile.py  test_read_threads.py  test_replis.py
uimodules/: pluralize.py  str_plural.py
utils/: humanize_datetime.py
views/: __init__.py  auth.py  base.py  favorites.py  home.py  profiles.py  replies.py  threads.py
